$Id$

Release Notes for JATSPAN at Sourceforge.
These notes are in reverse chronological order (newest releases at the top).

=======================================================================
jatspan-0.7
9/25/2011

Changes:
- Changed the name from "nlm-jats" to "jatspan".
- The biggest change here was that the directory structure changed again, in
  order to get these into JATSPack format.  Many of the decisions were based
  on having JATSPack be compatible with EXPath-packaging.  For example, it is a
  requirement that the directory structure in Subversion and in the released
  Zip file to be the same as the final on-disk repository layout.  Each
  JATSPack package, according to this spec, must have:
    - A root that is only one level deep.  I would have prefered a two-level
      hierarchy, with the top level being "jatslib", "nlmjats", and "nisojats".
    - Each package has a "content" directory directly under the root, which
      contains its content files.
    - The package descriptor expath-pkg.xml is into the root directory.
- Speaking of which, the expath-pkg.xml package descriptor files are all newly
  created with this release.
- Added the NISO 0.4 draft release versions, and adapted them into JATSPacks.
- Deleted README files that came from original NLM distributions.  They are not
  in sync with these packages, and they contain information which, while
  interesting and relevant, maybe should be provided somewhere else.

=======================================================================
nlm-jats-0.6-r123
3/19/2011

This is the first release that has a release tag in the Subversion repository,
see http://jatspan.svn.sourceforge.net/viewvc/jatspan/releases/0.6/.

Changes:
- Changed the root directory of the distribution file to "nlm-jats", instead of
  using the name of the release.  I think system identifiers in document type
  declarations could use relative pathnames that start with nlm-jats.  There is