@@ -88,7 +88,8 @@ perl TestValidation.pl</pre>
         </li>
         <li>
           Test one more time.  This is important to ensure
-          the integrity of the release file.
+          the integrity of the release file.  It's a good idea to use a
+          different machine, and try each of a Unix/Windows machine.
           <ul>
             <li>
               Unzip it to a temporary directory.
@@ -102,7 +103,7 @@ perl TestValidation.pl</pre>
           Rename the zip file to include the final Subversion repository
           revision.  Use the revision number that was generated when you created
           the release tag (which you can see
-          <a href='http://nlm-jats.svn.sourceforge.net/viewvc/nlm-jats/releases/'>here</a>).
+          <a href='http://jatspan.svn.sourceforge.net/viewvc/nlm-jats/releases/'>here</a>).
           For example,
           "jatspan-<em>1.16</em>-r<em>1024</em>.zip".
         </li>
